<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/steps_section"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/addActivityDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/shortDescEditTextLayout"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/shortDescEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shortDescLabel" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/longDescEditTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/longDescEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longDescLabel"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/videoURLEditTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/videoURLEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/videoLabel" />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/deleteStepBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorDefault"
        android:src="@drawable/ic_remove_circle"/>

</LinearLayout>