<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_section"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/addActivityDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quantityEditTextLayout"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantityLabel"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/measureEditTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/measureEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/measureLabel" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/IngredientEditTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <EditText
            android:id="@+id/ingredientEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredientLabel" />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/deleteIngredientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorDefault"
        android:src="@drawable/ic_remove_circle"/>

</LinearLayout>