<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/addRecipeTitleTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:text="@string/addActivity_Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/recipeNameEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/recipeNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addActivity_recipeNameEdit" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeIngredientsLabel_TextView"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:text="Recipe Ingredients"
                        android:textColor="@android:color/primary_text_light" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/recipeIngredientExtraLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/ingredients_group" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/recipeIngredients_addmoreBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorDefault"
                        android:src="@drawable/ic_add_circle"
                        android:visibility="invisible" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recipeStepsLabel_TextView"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/recipe_steps"
                        android:textColor="@android:color/primary_text_light" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/recipeStepExtraLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/steps_group" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/recipeSteps_addmoreBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorDefault"
                        android:src="@drawable/ic_add_circle"
                        android:visibility="invisible" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/imageSelection_TextView"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/imageSelectionLabel"
                        android:textColor="@android:color/primary_text_light" />


                    <ImageButton
                        android:id="@+id/imageSelectionBtn"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorDefault"
                        android:scaleType="centerInside"
                        android:padding="16dp"
                        android:src="@drawable/ic_add_a_photo" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/addButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:text="@string/add_button"
                android:textColor="@android:color/primary_text_dark" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>